build(packager): generalize jpackage plugin